tests/toylang/neg/001532_mutation.toylang
program a = { var program a = { } . a : bool; } .
